--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dicom-capacitor-docs",
+  "name": "flux-docs",
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
     "vitepress": "^1.5.0"
